<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul800"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".view.activity.EncerrarSolicitacaoMainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewVoltar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/solicitacao"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:cardBackgroundColor="@color/azul900"
        app:cardCornerRadius="7dp"
        app:cardElevation="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_construction_24"
                android:drawablePadding="5dp"
                android:drawableTint="@color/laranja"
                android:text="@string/equipamento"
                android:textColor="@color/white200"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewPatrimonio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Patrimônimo: 564"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/azul900"
        app:cardCornerRadius="7dp"
        app:cardElevation="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_text_snippet_24"
                android:drawablePadding="5dp"
                android:drawableTint="@color/laranja"
                android:text="@string/descricao_do_problema"
                android:textColor="@color/white200"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewDescricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="Monitor com defeito"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white200" />

            <TextView
                android:id="@+id/textViewDAta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Regristrado em 09/01/2023"
                android:textColor="@color/white200"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        app:cardBackgroundColor="@color/azul900"
        app:cardCornerRadius="7dp"
        app:cardElevation="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:drawableLeft="@drawable/ic_baseline_task_alt_24"
                android:drawablePadding="5dp"
                android:drawableTint="@color/laranja"
                android:text="@string/solucao"
                android:textColor="@color/white200"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editSolucao"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp"
                android:background="@drawable/background_edit"
                android:ems="10"
                android:gravity="start"
                android:hint="Descrição da solução"
                android:inputType="textPersonName"
                android:padding="10dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonSalvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/background_button_novo_chamado"
        android:text="@string/encerrar_solicitacao"
        app:backgroundTint="@null" />
</LinearLayout>